Bug 101764 - ICE for constexpr if within fold expression within lambda expression within a template
Summary: ICE for constexpr if within fold expression within lambda expression within a...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 12.0
: P3 normal
Target Milestone: 12.0
Assignee: Patrick Palka
URL:
Keywords: c++-lambda, ice-on-valid-code
: 96815 101595 (view as bug list)
Depends on:
Blocks: lambdas
  Show dependency treegraph
 
Reported: 2021-08-03 18:57 UTC by Johel Ernesto Guerrero Peña
Modified: 2022-10-18 23:26 UTC (History)
5 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2021-08-13 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johel Ernesto Guerrero Peña 2021-08-03 18:57:46 UTC
See https://godbolt.org/z/o944oWafx.
```C++
void f(auto i) {
  ([]<class... T>(T...) {
    return (..., [] {
      if constexpr (T{0})
        ;
    }());
  }(i));
}
void g() { f(0); }
```
```
<source>: In instantiation of 'f<int>(int)::<lambda(T ...)> [with T = {int}]':
<source>:7:4:   required from 'void f(auto:1) [with auto:1 = int]'
<source>:9:13:   required from here
<source>:6:8: internal compiler error: in tsubst_pack_expansion, at cp/pt.c:13102
    6 |     }());
      |        ^
0x1dadf09 internal_error(char const*, ...)
	???:0
0x6e5511 fancy_abort(char const*, int, char const*)
	???:0
0x962157 tsubst_pack_expansion(tree_node*, tree_node*, int, tree_node*)
	???:0
0x94de47 instantiate_decl(tree_node*, bool, bool)
	???:0
0x7f5dbe maybe_instantiate_decl(tree_node*)
	???:0
0x7f7520 mark_used(tree_node*, int)
	???:0
0x710ad5 build_op_call(tree_node*, vec<tree_node*, va_gc, vl_embed>**, int)
	???:0
0x9b4935 finish_call_expr(tree_node*, vec<tree_node*, va_gc, vl_embed>**, bool, bool, int)
	???:0
0x94de47 instantiate_decl(tree_node*, bool, bool)
	???:0
0x99020b instantiate_pending_templates(int)
	???:0
0x7fb2f9 c_parse_final_cleanups()
	???:0
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
Compiler returned: 1
```
Comment 1 Andrew Pinski 2021-08-13 19:39:25 UTC
Confirmed.
Comment 2 GCC Commits 2021-09-13 14:31:54 UTC
The master branch has been updated by Patrick Palka <ppalka@gcc.gnu.org>:

https://gcc.gnu.org/g:c8b2b89358481d36755dbc99e585a251780453b0

commit r12-3488-gc8b2b89358481d36755dbc99e585a251780453b0
Author: Patrick Palka <ppalka@redhat.com>
Date:   Mon Sep 13 10:29:32 2021 -0400

    c++: parameter pack inside constexpr if [PR101764]
    
    Here when partially instantiating the first pack expansion, substitution
    into the condition of the constexpr if yields a still-dependent tree, so
    tsubst_expr returns an IF_STMT with an unsubstituted IF_COND and with
    IF_STMT_EXTRA_ARGS added to.  Hence after partial instantiation the pack
    expansion pattern still refers to the unlowered parameter pack 'ts' of
    level 2, and it's thusly recorded in the new PACK_EXPANSION_PARAMETER_PACKS.
    During the subsequent final instantiation of the regenerated lambda we
    crash in tsubst_pack_expansion because it can't find an argument pack
    for this unlowered 'ts', due to the level mismatch.  (Likewise when the
    constexpr if is replaced by a requires-expr, which also uses the extra
    args mechanism for avoiding partial instantiation.)
    
    So essentially, a pack expansion pattern that contains an "extra args"
    tree doesn't play well with partial instantiation.  This patch fixes
    this by forcing such pack expansions to use the extra args mechanism as
    well.
    
            PR c++/101764
    
    gcc/cp/ChangeLog:
    
            * cp-tree.h (PACK_EXPANSION_FORCE_EXTRA_ARGS_P): New accessor
            macro.
            * pt.c (has_extra_args_mechanism_p): New function.
            (find_parameter_pack_data::found_extra_args_tree_p): New data
            member.
            (find_parameter_packs_r): Set ppd->found_extra_args_tree_p
            appropriately.
            (make_pack_expansion): Set PACK_EXPANSION_FORCE_EXTRA_ARGS_P if
            ppd.found_extra_args_tree_p.
            (use_pack_expansion_extra_args_p): Return true if there were
            unsubstituted packs and PACK_EXPANSION_FORCE_EXTRA_ARGS_P.
            (tsubst_pack_expansion): Pass the pack expansion to
            use_pack_expansion_extra_args_p.
    
    gcc/testsuite/ChangeLog:
    
            * g++.dg/cpp1z/constexpr-if35.C: New test.
Comment 3 Patrick Palka 2021-09-13 14:59:49 UTC
Fixed for GCC 12.
Comment 4 Patrick Palka 2021-10-03 01:26:47 UTC
*** Bug 101595 has been marked as a duplicate of this bug. ***
Comment 5 Patrick Palka 2021-11-02 19:56:27 UTC
*** Bug 96815 has been marked as a duplicate of this bug. ***
Comment 6 GCC Commits 2022-10-18 23:26:37 UTC
The master branch has been updated by Joseph Myers <jsm28@gcc.gnu.org>:

https://gcc.gnu.org/g:f5f1d92fe2e1d75c3fae34497929a1965af704ae

commit r13-3366-gf5f1d92fe2e1d75c3fae34497929a1965af704ae
Author: Joseph Myers <joseph@codesourcery.com>
Date:   Tue Oct 18 23:25:47 2022 +0000

    c: Diagnose "enum tag;" after definition [PR107164]
    
    As noted in bug 101764, a declaration "enum tag;" is invalid in
    standard C after a definition, as well as when no definition is
    visible; we had a pedwarn-if-pedantic for the forward declaration
    case, but were missing one for the other case.  Add that missing
    diagnostic (if pedantic only).
    
    (These diagnostics will need to be appropriately conditioned when
    support is added for C2x enums with fixed underlying type, since "enum
    tag : type;" is OK both before and after a definition.)
    
    Bootstrapped with no regressions for x86_64-pc-linux-gnu.
    
            PR c/107164
    
    gcc/c/
            * c-decl.cc (shadow_tag_warned): If pedantic, diagnose "enum tag;"
            with previous declaration visible.
    
    gcc/testsuite/
            * gcc.dg/c99-tag-4.c, gcc.dg/c99-tag-5.c, gcc.dg/c99-tag-6.c: New
            tests.